--- a/gry.sample.scorer2/src/main/resources/public/css/main.css
+++ b/gry.sample.scorer2/src/main/resources/public/css/main.css
@@ -1,3 +1,14 @@
+/* @font-face kit by Fonts2u (http://www.fonts2u.com) */
+@font-face {
+    font-family:"Segment14";
+    src:url("../fonts/Segment14/Segment14.eot?") format("eot"),
+        url("../fonts/Segment14/Segment14.woff") format("woff"),
+        url("../fonts/Segment14/Segment14.ttf") format("truetype"),
+        url("../fonts/Segment14/Segment14.svg#Segment14") format("svg");
+    font-weight:normal;
+    font-style:normal;
+}
+
 body {
     background-color: steelblue;
 }
@@ -5,6 +16,11 @@ body {
 h1 {
     color: white;
     text-align: center;
+}
+
+h3 {
+    font-family: Segment14;
+    color: wheat;
 }
 
 p {
